--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,12 @@ yarn-error.*
 *.pem
 
 # local env files
+.env
 .env*.local
+.env.development
+.env.production
+.env.test
+
 
 # typescript
 *.tsbuildinfo
