--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
+    "@supabase/supabase-js": "^2.58.0",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "~53.0.22",
     "expo-blur": "~14.1.5",
+    "expo-document-picker": "^14.0.7",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "^7.1.7",
     "expo-router": "~5.1.6",
