--- a/package.json
+++ b/package.json
@@ -10,35 +10,43 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^2.14.28",
-    "@expo/metro-runtime": "^5.0.4",
+    "@expo/metro-runtime": "~5.0.5",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "@supabase/supabase-js": "^2.58.0",
     "base64-arraybuffer": "^1.0.2",
-    "expo": "~53.0.22",
+    "buffer": "^6.0.3",
+    "expo": "~53.0.23",
+    "expo-av": "~15.1.7",
     "expo-blur": "~14.1.5",
-    "expo-document-picker": "^14.0.7",
+    "expo-document-picker": "~13.1.6",
+    "expo-file-system": "~18.1.11",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "^7.1.7",
-    "expo-router": "~5.1.6",
+    "expo-router": "~5.1.7",
     "expo-secure-store": "~14.2.4",
     "expo-status-bar": "~2.2.3",
     "firebase": "^12.2.1",
+    "framer-motion": "^12.23.22",
+    "lucide-react": "^0.544.0",
     "nativewind": "^4.1.23",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.20.0",
+    "react-native-worklets": "^0.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^3.4.18",
     "typescript": "~5.8.3"
   },
   "private": true
